upd: client, account, transaction adapter and entity